test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-nonnil-owned.good
init-var-nonnil-unmanaged-from-nonnil-owned.chpl:9: error: cannot assign to unmanaged MyClass from owned MyClass
